--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
 <body>
 
+<div class="container-fluid">
+	<div class="row bg-secondary text-white pb-1">
+		<div class="col-12 header d-flex justify-content-center">
+			<h4>Filmoversigten</h4>
+		</div>
+	</div>
+</div>
+
 <div class="container">
 
 	<div class="products">
